[package]
name = "css-parser"
version = "0.1.0"
authors = ["kaleidawave <kaleidawave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
name = "css_parser"
path = "src/lib.rs"

[[bin]]
name = "css_parser_cli"
path = "src/bin.rs"

[dependencies]
console = "0.14.0"
tokenizer-lib = "0.4.0"