[package]
name = "css-parser"
description = "CSS parser and compiler written in Rust. Can be used as standalone library or cli tool"
version = "0.1.0"
authors = [ "kaleidawave <kaleidawave@gmail.com>" ]
edition = "2018"
keywords = [ "css" ]
categories = [ "compilers" ]
repository = "https://github.com/kaleidawave/css-parser"
license = "MIT"

[lib]
name = "css_parser"
path = "src/lib.rs"

[[bin]]
name = "css_parser_cli"
path = "src/bin.rs"

[dependencies]
console = "0.14.0"
tokenizer-lib = "0.4.1"
lazy_static = "1.4.0"
