[package]
name = "css-parser"
description = "CSS parser and compiler written in Rust. Can be used as standalone library or cli tool"
version = "0.2.0"
authors = [ "Ben <kaleidawave@gmail.com>" ]
edition = "2018"
keywords = [ "css" ]
categories = [ "compilers" ]
repository = "https://github.com/kaleidawave/css-parser"
license = "MIT"

[lib]
name = "css_parser"
path = "src/lib.rs"

[[bin]]
name = "css_parser_cli"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
console = "0.14.0"
tokenizer-lib = "1.2.0"
derive_more = "0.99.16"
source-map = "0.5.0"
argh = { version = "0.1.6", optional = true }
base64 = { version = "0.13.0", optional = true }
codespan-reporting = { version = "0.11.1", optional = true }

[features]
cli = ["argh", "base64", "codespan-reporting"]
